fix: dark mode bug

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -3,25 +3,19 @@
 @tailwind utilities;
 
 @layer components {
-  .sidebar-item-container {
-    @apply flex items-center justify-between px-4 gap-3  w-40  cursor-pointer uppercase text-green-500  hover:text-white;
-  }
-  .sidebar-icon {
-    @apply relative flex items-center justify-center   mt-2 mb-2    transition-all duration-200 ease-in-out;
-  }
-  .navigation-item {
-    @apply dark:text-primary_t_2 text-secondary_t_2 uppercase cursor-pointer;
+  .theme-color {
+    @apply bg-secondary dark:bg-primary;
   }
 
-  .theme-color {
-    @apply bg-primary dark:bg-secondary;
+  .navigation-item {
+    @apply text-primary dark:text-secondary uppercase;
   }
   .container {
-    @apply bg-primary dark:bg-secondary text-secondary_s_2 dark:text-primary_s_2 min-w-full w-full h-screen;
+    @apply bg-secondary dark:bg-primary text-primary_s_2  dark:text-secondary_s_2 min-w-full w-full h-screen;
   }
 
   body {
-    @apply bg-primary dark:bg-secondary;
+    @apply bg-secondary dark:bg-primary;
   }
 
   p {
